fix: stack on mobile conflict when using image aligntop

--- a/src/scss/blocks/_homepage-articles.scss
+++ b/src/scss/blocks/_homepage-articles.scss
@@ -78,7 +78,7 @@
 		}
 	}
 
-	&.mobile-stack {
+	&.mobile-stack:not(.image-aligntop) {
 		.post-thumbnail {	
 			margin-bottom: var(--wp--preset--spacing--30);
 
